--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -87,8 +87,8 @@ html {
   width: 3.5rem;
   height: 3px;
   position: relative;
-  top: -2rem;
-  right: -2rem;
+  top: -1rem;
+  right: 0rem;
   display: none;
 }
 
@@ -1527,6 +1527,10 @@ html {
     width: 100%;
     padding-bottom: 5rem;
   }
+
+  .price {
+    font-size: 4rem;
+  }
 }
 
 @media only screen and (max-width: 500px) {
@@ -1580,5 +1584,23 @@ html {
   .jackpots__head h2,
   .jackpots__head p {
     width: 100%;
+  }
+
+  .integration .left {
+    width: 100%;
+  }
+
+  .question,
+  .question-open {
+    padding: 0 2rem;
+  }
+
+  .footer {
+    padding: 6rem;
+  }
+
+  .footer .main-nav {
+    display: flex;
+    flex-direction: column;
   }
 }
